--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,8 +2,8 @@
   --header-height: 4.375rem;
 
   /* Deprecated Colors - not in style guide */
-  --black: #000000;
-  --white: #ffffff;
+  --black: #000;
+  --white: #fff;
   --blue-grey: #596778;
   --medium-grey: #b9c0cb;
   --light-grey: #f5f5f5;
@@ -16,7 +16,6 @@
   --grad-narrow-blue: color(var(--grad-wide-green) blend(var(--grad-wide-blue) 30%));
   --grad-medium-blue: color(var(--grad-wide-blue) blend(var(--grad-wide-blue) 15%));
   --grad-wide-blue: #3289e1;
-
   --yellow: #ffc107;
 
   /* color by function */
