--- a/src/app.css
+++ b/src/app.css
@@ -4,12 +4,13 @@
   color: var(--color-text-default);
   height: 100%;
   margin: 0 auto;
-  max-width: 34.375rem;
+  max-width: 36.375rem;
   min-width: 14rem;
+  padding: 0 1rem;
 }
 
 .title {
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-weight: 100;
   margin: 1rem auto;
   text-align: center;
